moved wildcards to standard unix stuff

--- a/_posts/2021-01-14-01_Unix_Shell.md
+++ b/_posts/2021-01-14-01_Unix_Shell.md
@@ -316,6 +316,77 @@ are understood by all commands.
 * The other great interactive feature is the *history*: try using the
   cursor-up and -down keys.
 
+### Wildcards ###
+
+The shell contains a simple *pattern matching* syntax (wildcards or
+"glob patterns") to select all files that match the pattern.  Commonly
+used patterns are
+
+* `*`: matches zero or more characters in a name, e.g., `*.dat`
+  matches all files ending in `.dat`, and `report_2021-*.txt` matches
+  `report-2021-11.txt`, `report-2021-12.txt`, but not
+  <strike><code>report-2020-2.txt</code></strike>
+* `?` matches a single character in a name, e.g., `?.jpg` matches
+  `1.jpg`, `a.jpg`, but not <strike><code>ab.jpg</code></strike>
+
+Neither of them matches a leading `.` in a file name or a space or the directory separator `/`.
+
+#### Example: List all dat files
+
+List all "dat" files in the current directory: Use the character `*`
+to match "any part of a file name"
+
+{% highlight bash %}
+ls *.dat
+{% endhighlight %}
+
+#### Example: List all commands with "oo" in their name
+
+List all files containing "oo" in the `/usr/bin` directory (will only
+work on Linux or macOS):
+
+{% highlight bash %}
+ls /usr/bin/*oo*
+{% endhighlight %}
+
+#### Example: Delete jpg files in directories 19xx
+
+**Warning**: DO NOT COPY AND PASTE ANY COMMAND LINE CONTAINING `rm`
+WITHOUT THINKING *TWICE* ABOUT IT. You have been warned.
+
+Delete all jpg images in directories from the last century
+
+{% highlight bash %}
+rm Pictures/19??/*.jpg
+{% endhighlight %}
+
+(Note that `19??` matches anything that looks like a year from the
+last century such as 1999, 1969, ... although it would also match
+19xy; the `*.jpg` pattern matches all files with suffix jpg.)
+
+#### Example: Show all two-letter Unix commands
+
+Show commands with exactly two letters (assuming that you have a
+Unix-like OS such as Linux or macOS where the commands are located in
+`/bin` and `/usr/bin`):
+
+{% highlight bash %}
+ls /bin/?? /usr/bin/??
+{% endhighlight %}
+
+(Two letter commands are important — learn more about these commands,
+e.g., with the three-letter command `man`.)
+
+#### Example: Copy Jupyter notebooks to another directory
+
+As part of working with code in this class, we will have to copy
+Jupyter notebooks from one directory to another directory
+
+{% highlight bash %}
+cp ~/PHY494-resources/10_ODEs/*.ipynb ~/PHY494/10_ODEs/
+{% endhighlight %}
+
+
 ### Error messages ###
 
 Unix commands are terse: If everything works, they say nothing. If
@@ -369,6 +440,7 @@ bash: cd: bogus: No such file or directory
   for `cd`).
 * Use the tilde character `~` for your home directory, e.g. `cd
   ~/Documents` is equivalent to `cd /home/dvader/Documents`.
+* Use wildcards (`*`) but test them with `ls` before using them with `rm`!
 
 
 ### Creating directories and files ###
