rewrote git lesson

--- a/_posts/2021-01-19-02_Git_basics.md
+++ b/_posts/2021-01-19-02_Git_basics.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  03 Git Basics
+title:  02 Git Basics
 ---
 
 This is a short introduction to one of the most essential tools in
@@ -143,17 +143,77 @@ try `git help` and `git help tutorial`.
 
 ### Creating a repository ###
 
-You alread should have a `PHY494` directory in your home directory
-with a layout like the following (where `01_shell` might contain
-other folders and documents):
+A repository starts from a directory with files.
+
+#### Create your `~/PHY494` directory ####
+
+During the class you will work on programs. Make a directory
+`~/PHY494` where you will do your work:
+{% highlight bash %}
+mkdir ~/PHY494
+{% endhighlight %}
+Create subdirectories for lessons:
+{% highlight bash %}
+cd ~/PHY494
+mkdir 01_shell 02_git
+{% endhighlight %}
+
+If you have done the [shell exercises]({{ site.baseurl }}{% post_url
+2021-01-14-01_Unix_Shell
+%}#activity-directory-structure-for-the-class) then your PHY494 might
+now look like the following:
 
 ~~~
 ~/PHY494/
-        01_shell/
-        02_python/
-             hello.py
-             motion.py
+  ├── 01_shell
+  │   ├── Documents
+  │   │   └── work
+  │   │       ├── TODO
+  │   │       └── lesson
+  │   └── data
+  └── 02_git
 ~~~
+
+Create a `README.md` file in `01_shell` and `02_git` with [your
+editor]({{ site.baseurl }}{% post_url 2021-01-14-01_Unix_Shell
+%}#creating-text-files-with-a-text-editor) that contains text like the
+following:
+{% highlight markdown %}
+# 01 Shell
+
+Work with the `bash` shell.
+{% endhighlight %}
+and
+{% highlight markdown %}
+# 02 git
+
+Working with the `git` *version control software*; see https://git-scm.com/.
+{% endhighlight %}
+(or write whatever you want — the exact content is not
+important). Also create a file `~/01_shell/hello.sh` with content
+{% highlight markdown %}
+# simple bash script example
+echo "Hello World!"
+{% endhighlight %}
+
+Your directory structure should now have two `README.md` files and `hello.sh` (you can
+use `ls -R ~/PHY494` to check):
+
+~~~
+~/PHY494/
+  ├── 01_shell
+  │   ├── Documents
+  │   │   └── work
+  │   │       ├── TODO
+  │   │       └── lesson
+  │   ├── README.md        <---- should be present
+  │   ├── hello.sh         <---- should be present
+  │   └── data
+  └── 02_git
+      └── README.md        <---- should be present
+~~~
+
+#### `git init` ####
 
 Turn the `PHY494` directory into **repository** with the `git init` command:
 
@@ -180,6 +240,23 @@ Now try the (possibly) most-used git command:
 {% highlight bash %}
 git status
 {% endhighlight %}
+
+which gives
+~~~
+On branch master
+
+No commits yet
+
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+	01_shell/
+	02_git/
+~~~
+
+... but what does it mean? For this
+[gobbledygook](https://www.merriam-webster.com/dictionary/gobbledygook)
+to make sense we need to know about *the three stages of git*:
+
 
 ### The three states of Git ###
 
@@ -210,7 +287,7 @@ add` adds files and directories to the *staging area*:
 
 
 {% highlight bash %}
-git add 02_python
+git add 02_git 01_shell/hello.sh
 git status
 {% endhighlight %}
 
@@ -223,8 +300,8 @@ git status
 
 
 (Use `git reset FILENAME` to unstage any files that you might have
-added accidentally. For instance, do not checking backup files created
-by your editor.)
+added accidentally. For instance, do not add backup files that were
+created by your editor.)
 
 The files are not committed yet. You can do more work, add more files
 and directories...
@@ -251,20 +328,28 @@ git commit
   initial commit of PHY494 class work
   
   * lesson 01 on shell
-  * lesson 02 on python
+  * lesson 02 on git
   ~~~
   
 * After you wrote and saved the message ("save" in `atom`, `^O` in
-  `nano`; `i` to write and `ESC :wq` to save and exit `vim`) and
+  `nano`; `i` to write and `ESC :wq` to save and exit in `vim`) and
   exited ("quit" in `atom`, `^X` in `nano`), your changes will be
   committed to the repository.
 * You can also supply the message as an argument: `git commit -m "one
   line summary of changes"`.
+* **If you are having problems to make `git commit` with your editor
+  work** then instead use `git commit -m 'one line summary message'`
+  and debug this problem later.[^1]
 * Check the status with `git status`...
 
 For a new commit, [add files](#adding-files) and [commit](#committing)
 again.
 
+For good measure:
+{% highlight bash %}
+git commit
+{% endhighlight %}
+should show that you have no uncommited changes in your working directory.
 
 ### History
 
@@ -306,13 +391,29 @@ command in that they stage these changes; you still have to
 
 ### Working with remote repositories
 
-Initialize a local repository from a remote source:
+Repositories can live in your local file system or remotely on another
+server ("in the cloud"). Git provides a way to synchronize local and
+remote repositories.
+
+There's nothing special about remote repositories. They do not really
+differ from your local repository. Git is a *distributed version
+control system* and any repository holds all the relevant history.
+
+There exist many services that host remote repositories "in the
+cloud". One of them is [GitHub](https://github.com) (which we use for
+this class).[^7]
+
+
+#### Initializing from remote: `git clone`
+
+To initialize a local repository from a remote source we use `git clone`:
 
 {% highlight bash %}
 git clone URL
 {% endhighlight %}
 
-Clone the repository where code and data will be posted:
+For instance, let's clone the class repository where code and data
+will be posted by the instructor:
 
 {% highlight bash %}
 cd ~
@@ -329,39 +430,32 @@ Note:
 * For all other `git` commands you *must* be *inside* your local
   repository:
 
-		cd ~/PHY494-resources
+      cd ~/PHY494-resources
 
 
-Update your local repository with any "upstream" changes:
+#### Getting changes (reading): `git pull`
+
+Update your local repository with any "upstream" changes by
+**pulling** from the remote repository:
 
 {% highlight bash %}
 git pull
 {% endhighlight %}
 
-Update the remote repository with you local changes (commits):
+#### Updating the remote (writing): `git push`
+
+If one has write access to a remote repository then one can also
+update the remote repository with local changes (commits) by
+**pushing** all commits that the local repository has:
 
 {% highlight bash %}
 git push
 {% endhighlight %}
 
-(For "pushing" to work, you must be allowed to write to the remote
-repository; this will not work for *PHY494-resources* but we will use
-it below for
-[your own GitHub repositories](#set-up-your-own-github-repositories)).
+(This will *not* work for *PHY494-resources* because only instructors
+have write access but we will use it below for [your own GitHub
+repositories](#set-up-your-own-github-repositories)).
 
-### Contributing to Open Source on GitHub
-
-GitHub enables you to easily contribute to other projects. This
-includes
-
-* filing bug reports or feature requests (*raising issues*); for
-  instance, if you do not agree with some of the Star Wars data from
-  the previous lessons, raise an issue in the
-  [issue tracker for the PHY494-auxilliary repository](https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-auxilliary/issues).
-* proposing to add your own code and changes through
-  *[pull requests](https://help.github.com/articles/using-pull-requests/)*
-  (but this is too advanced for a our short introduction today --- see
-  the additional resources under [More...](#more)).
 
 
 ## Set up your own GitHub repositories
@@ -382,20 +476,28 @@ includes
    repository. You can have many different remotes, just give them
    different names. You can list them with
 
-		git remote -v
+        git remote -v
+
+5. Traditionally, git used the name "master" for the main branch of
+   the work. However, this name is falling rapidly out of favor so we
+   rename our branch to "main":
+
+        git branch -M main
+
+   (You only have to do this once.)
 
 5. **push** your local history to the remote repository:
 
-		git push --set-upstream origin master
+       git push --set-upstream origin main
 
    You need to enter your username and password [^3].
 
-   You only need the `--set-upstream origin master` (or `-u origin
-   master`) for the first time (it tells git which "branches" to
+   You only need the `--set-upstream origin main` (or `-u origin
+   main`) for the first time (it tells git which "branches" to
    associate with each other in local and remote) [^4]. All further
    push operations will then simply be
 
-		git push
+       git push
 
    Look at the web interface at
    https://github.com/USERNAME/PHY494 and see your changes
@@ -405,23 +507,42 @@ For the rest of the semester, commit what you did during each class
 session to the `~/PHY494` repository on your laptop (and also push
 to your GitHub repository as a backup).
 
-**Note**: Your GitHub repository is public. Do not commit homeworks
-there; you will receive a *private* repository for the duration of the
+**Note**: Your GitHub repository is for in-class work. Do not commit homeworks
+there; you will receive *private* repositories for the duration of the
 class for this purpose.
 
 
-## Class resources on GitHub
+## PHY494 Workflow: Resources and Workspace
 
 Code, notebooks, and files are being made available on GitHub in the
-repository
-[ASU-CompMethodsPhysics-PHY494/PHY494-resources](https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources). If
-you have not done so already:
+**resources** repository
+[ASU-CompMethodsPhysics-PHY494/PHY494-resources](https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources).
+For the rest of the semester it will be assumed that you have a
+`~/PHY494-resources` repository that you can update with a simple `git
+pull` as soon as new material is posted.
+
+If you have not done so already, set up `~/PHY494-resources`:
 
 {% highlight bash %}
 cd ~
 git clone https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources.git
 {% endhighlight %}
+
+You should also [have your own **workspace** repository `~/PHY494` set
+up](#set-up-your-own-github-repositories).
  
+### Overview
+
+When we start a new lesson you will typically go through the following steps to
+get code and data files.
+
+1. pull latest changes from PHY494-resources
+2. copy the new directories and files into your workspace PHY494
+3. work in your workspace
+4. commit changes in your workspace
+5. (optional) push changes in your workspace your GitHub repository
+
+### Update resources ("pull resources")
 
 Update when your instructor changed anything on the remote:
 
@@ -430,14 +551,30 @@ cd ~/PHY494-resources
 git pull
 {% endhighlight %}
 
-Note that you should not be changing anything inside
-`~/PHY494-resources` but instead *copy* whatever you want to change
-to your own work directory. 
+Check what's new
+{% highlight bash %}
+ls -lt
+{% endhighlight %}
+(newest at top)
+
+### Copy new files and directories to workspace ("copy resources")
+
+You should not be changing anything inside `~/PHY494-resources`
+(because the next `git pull` might try to change something that you
+did [^6]) but instead *copy* whatever you want to change to your own work
+directory.
+
+For example:
+
+{% highlight bash %}
+cp -r ~/PHY494-resources/00_setup ~/PHY494
+cd ~/PHY494/00_setup
+{% endhighlight %}
+
 
 {% comment %}
 For example, in the
-[Fix as many bugs as possible! challenge]({{site.baseurl}}{% post_url
-2017-01-24-05_Debugging %}#activity-fix-as-many-bugs-as-possible) you
+Fix as many bugs as possible! challenge you
 would copy all the `bugs_*.py` files to your own `~/PHY494` repo and
 work there:
 
@@ -448,25 +585,32 @@ cd ~/PHY494/05_debugging
 
 {% endcomment %}
 
-If you happen to have accidentally edited files inside
-`~/PHY494-resources` you might run into *merge conflicts* when you run
-`git pull` the next time. If that happens, copy *all files that you
-edited* (use `git status` to see which ones are modified) to a safe
-directory and then reset with the command
 
+### Work, commit, push
+Then work on the files **in the workspace**.
+
+When you have changes that you want to track, `git add /
+commit / push`:
 {% highlight bash %}
-cd ~/PHY494-resources
-# Next command only if you ran into a merge conflict
-# during a 'git pull'
-git merge --abort
-
-# undo ALL of YOUR changes
-git reset --hard HEAD
+git add .
+git commit -m 'updated 00 setup files'
+git push
 {% endhighlight %}
 
-**WARNING**: This will undo *all your changes* but will allow you to
-just run the next `git pull` command again without problems.)
 
+## Contributing to Open Source on GitHub
+
+[GitHub](https://github.com) is a provider for remote repositories. It
+enables you to easily contribute to other projects. This includes
+
+* filing bug reports or feature requests (*raising issues*); for
+  instance, if you do not agree with some of the Star Wars data from
+  the previous lessons, raise an issue in the
+  [issue tracker for the PHY494-auxilliary repository](https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-auxilliary/issues).
+* proposing to add your own code and changes through
+  *[pull requests](https://help.github.com/articles/using-pull-requests/)*
+  (but this is too advanced for a our short introduction today --- see
+  the additional resources under [More...](#more)).
 
 
 ## More... ##
@@ -549,4 +693,27 @@ just run the next `git pull` command again without problems.)
     repository. See more in Git Pro under [Gettings Started – Git
 	Basics](https://git-scm.com/book/en/v2/Getting-Started-Git-Basics).
 	
+[^6]:
+
+    If you happen to have accidentally edited files inside
+    `~/PHY494-resources` you might run into *merge conflicts* when you
+    run `git pull` the next time. If that happens, copy *all files
+    that you edited* (use `git status` to see which ones are modified)
+    to a safe directory and then reset with the command
+
+        cd ~/PHY494-resources
+        # Next command only if you ran into a merge conflict
+        # during a 'git pull'
+        git merge --abort
+        
+        # undo ALL of YOUR changes
+        git reset --hard HEAD
+
+    **WARNING**: This will undo *all your changes* but will allow you to
+    just run the next `git pull` command again without problems.
  
+[^7]:
+
+    Other commonly used git repository hosters are [https://gitlab.com](https://gitlab.com)
+    and [https://bitbucket.org/](https://bitbucket.org/).
+    
