use meta number for sorting posts

--- a/_posts/2021-01-14-01_Unix_Shell.md
+++ b/_posts/2021-01-14-01_Unix_Shell.md
@@ -2,7 +2,7 @@
 layout: post
 title: 01 The Unix Shell
 date: 2021-01-14 13:30:00
-weight: 10
+number: 10
 ---
 
 This lesson introduces the **shell**, also known as the **command
