--- a/_posts/2021-01-19-02_Git_basics.md
+++ b/_posts/2021-01-19-02_Git_basics.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  02 Git Basics
+number: 20
 ---
 
 This is a short introduction to one of the most essential tools in
@@ -714,6 +715,7 @@ enables you to easily contribute to other projects. This includes
  
 [^7]:
 
-    Other commonly used git repository hosters are [https://gitlab.com](https://gitlab.com)
-    and [https://bitbucket.org/](https://bitbucket.org/).
+    Other commonly used git repository hosters are
+    [https://gitlab.com](https://gitlab.com) and
+    [https://bitbucket.org/](https://bitbucket.org/).
     
