updated TOC in git lesson

--- a/_posts/2021-01-19-02_Git_basics.md
+++ b/_posts/2021-01-19-02_Git_basics.md
@@ -43,8 +43,8 @@ develop as part of your assignments and projects.
 
 1. [Tutorial](#tutorial)
 2. [Set up your own GitHub repositories](#set-up-your-own-github-repositories)
-3. [Class resources on GitHub](#class-resources-on-github)
-4. [Additional resources](#more)
+3. [PHY494 Workflow: Resources and Workspace](#phy494-workflow-resources-and-workspace)
+4. [Additional reading](#more)
 
 ## Tutorial
 Let's use `git` to manage what we have done so far.
