--- a/_posts/2021-01-21-03_HelloWorld.md
+++ b/_posts/2021-01-21-03_HelloWorld.md
@@ -1,20 +1,21 @@
 ---
 layout: post
-title: 02 The first Python program
+title: 03 The first Python program
+number: 30
 ---
 
 In your work directory, create a directory `~/PHY494/02_python` and go
 to this directory:
 
 {% highlight bash %}
-mkdir ~/PHY494/02_python
-cd ~/PHY494/02_python
+mkdir ~/PHY494/03_python
+cd ~/PHY494/03_python
 {% endhighlight %}
 
 ## Hello World ##
 
 Using you favorite editor (for instance, `atom`), create a text file named `hello.py` in the
-directory `~/PHY494/02_python`[^1] with the
+directory `~/PHY494/03_python`[^1] with the
 following content:
 
 {% highlight python %}
@@ -66,10 +67,10 @@ python
 
 You should see something like
 
-	Python 3.6.8 |Anaconda, Inc.| (default, Dec 29 2018, 19:04:46)
-	[GCC 4.2.1 Compatible Clang 4.0.1 (tags/RELEASE_401/final)] on darwin
-	Type "help", "copyright", "credits" or "license" for more information.
-	>>>
+        Python 3.6.8 |Anaconda, Inc.| (default, Dec 29 2018, 19:04:46)
+        [GCC 4.2.1 Compatible Clang 4.0.1 (tags/RELEASE_401/final)] on darwin
+        Type "help", "copyright", "credits" or "license" for more information.
+        >>>
 
 
 The Python prompt is `>>>`.
@@ -310,8 +311,8 @@ In `ipython` [^3]
     If you can call your editor from the command line then this is as
     easy as, for example with `atom` (or `nano`),
 
-         cd ~/PHY494/02_python
-	     atom hello.py
+         cd ~/PHY494/03_python
+         atom hello.py
 
     This will open a new file with name `hello.py` or open an existing
     file if it is present.
@@ -321,32 +322,31 @@ In `ipython` [^3]
     then use a menu command such as *File → New* to create a blank
     document (use or *File → Open* to open an existing file). Once you
     have written content you need to *save it in the correct location*
-    (usually, or *File → Save*). To find the `02_python` directory,
+    (usually, or *File → Save*). To find the `03_python` directory,
     first navigate to your home directory:
 
-	* This can be tricky on **Windows** : In your shell (not in your
-      editor), type `cd; pwd` to learn the path to your home
-      directory. In your editor's file system dialog window, start
-      from the system disk (normally `C:` under *Computer*) and look
-      for `C:\Users\YOUR_USERNAME`.
+        * This can be tricky on **Windows** : In your shell (not in your
+          editor), type `cd; pwd` to learn the path to your home
+          directory. In your editor's file system dialog window, start
+          from the system disk (normally `C:` under *Computer*) and look
+          for `C:\Users\YOUR_USERNAME`.
 
-	* On Apple **Mac OS X**, your home directory is
-      `/Users/YOUR_USERNAME`.
+        * On Apple **Mac OS X**, your home directory is `/Users/YOUR_USERNAME`.
 
-	* On typical **Linux** distributions it is `/home/YOUR_USERNAME`.
-	
+        * On typical **Linux** distributions it is `/home/YOUR_USERNAME`.
+        
     In your home directory, locate the `PHY494` folder, click on it to
-    find the `02_python` folder inside and click on the
+    find the `03_python` folder inside and click on the
     latter. Provide the file name ("hello.py") and save the file. (In
     the shell, make sure that the file is in place where you expect it
     to be, i.e., `ls -la`.)
 
 [^2]: 
     
-	If you need [help](#help), look at [Using Python as a
-	Calculator](https://docs.python.org/3/tutorial/introduction.html#using-python-as-a-calculator)
+    If you need [help](#help), look at [Using Python as a
+    Calculator](https://docs.python.org/3/tutorial/introduction.html#using-python-as-a-calculator)
     in the standard Python Tutorial.
-	
+        
 [^3]:
 
     `%run` is an ipython "magic" command, see help on those commands
@@ -356,22 +356,20 @@ In `ipython` [^3]
 
     If you don't want to see graphics inline but as a separate window
     you can try
-	
-		ipython --matplotlib=qt5
+        
+                ipython --matplotlib=qt5
     
     (If `qt5` does not work, try `qt`, `wx`, `tk`, `auto`, or just
     `--matplotlib`.)
-	
-	However, this does not always work and might require additional
-	packages. Please share any insights and solutions!
-	
+        
+    However, this does not always work and might require additional
+    packages. Please share any insights and solutions!
+        
 [^5]:
 
-    In Python 2, the `/` division operator would perform floor
-	division _if both operands were integers_ but normal ("true") division if
+    In Python 2, the `/` division operator would perform floor       division _if both operands were integers_ but normal ("true") division if
     at least one operand was a floating point number. Therefore, in
     old Python 2 code you might see constructs such as `1.0 * a / 2`
-    to force a true division, no matter the value of the variable
-	`a`. In Python 3, the `/` operator _always_ 
+    to force a true division, no matter the value of the variable   `a`. In Python 3, the `/` operator _always_ 
     performs true division, which prevents some rather nasty bugs from occuring.
-	
+        
