fixed markup in HelloWorld page

--- a/_posts/2021-01-26-03_HelloWorld.md
+++ b/_posts/2021-01-26-03_HelloWorld.md
@@ -107,20 +107,20 @@ Start `python` and figure out [^2] how to compute the left hand sides (the
 right hand sides are there for you to check your results):
 
 \begin{align}
--1 + 2 &= 1\\\
-102 - 201 &= -99\\\
-12345678987654321 \times 9876543210123456789 &= 121932631979881115785550983112635269\\\
-3/2 &= 1.5\\\
-\frac{1}{1 - 0.9^2} &= 5.263157894736843\\\
+-1 + 2 &= 1 \\\%
+102 - 201 &= -99 \\\%
+12345678987654321 \times 9876543210123456789 &= 121932631979881115785550983112635269\\\%
+3/2 &= 1.5\\\%
+\frac{1}{1 - 0.9^2} &= 5.263157894736843\\\%
 1 + \frac{2}{1} + \frac{2^2}{1\cdot2} + \frac{2^3}{1\cdot2\cdot3} +
-\frac{2^4}{1 \cdot 2\cdot3\cdot4} &= 7.0\\\
--3^4 &= -81\\\
-2 - 5.5\times 10^{-7} &= 1.99999945\\\
-1.672621898\times 10^{-27} \times (3\times10^8)^2 &= 1.5053597082 \times 10^{-10}\\\
-\sqrt{2} &= 1.4142135623730951\\\
-\sqrt{-1} &= i\\\
-(1 + 2i) + (-2 + i) &= -1 + 3i\\\
-\frac{1 + 2i}{2 - i} &= i\\\
+\frac{2^4}{1 \cdot 2\cdot3\cdot4} &= 7.0\\\%
+-3^4 &= -81\\\%
+2 - 5.5\times 10^{-7} &= 1.99999945\\\%
+1.672621898\times 10^{-27} \times (3\times10^8)^2 &= 1.5053597082 \times 10^{-10}\\\%
+\sqrt{2} &= 1.4142135623730951\\\%
+\sqrt{-1} &= i\\\%
+(1 + 2i) + (-2 + i) &= -1 + 3i\\\%
+\frac{1 + 2i}{2 - i} &= i\\\%
 \end{align}
 
 ### More operations
@@ -325,15 +325,15 @@ In `ipython` [^3]
     (usually, or *File → Save*). To find the `03_python` directory,
     first navigate to your home directory:
 
-        * This can be tricky on **Windows** : In your shell (not in your
-          editor), type `cd; pwd` to learn the path to your home
-          directory. In your editor's file system dialog window, start
-          from the system disk (normally `C:` under *Computer*) and look
-          for `C:\Users\YOUR_USERNAME`.
+      * This can be tricky on **Windows** : In your shell (not in your
+	editor), type `cd; pwd` to learn the path to your home
+	directory. In your editor's file system dialog window, start
+	from the system disk (normally `C:` under *Computer*) and look
+	for `C:\Users\YOUR_USERNAME`.
 
-        * On Apple **Mac OS X**, your home directory is `/Users/YOUR_USERNAME`.
+      * On Apple **Mac OS X**, your home directory is `/Users/YOUR_USERNAME`.
 
-        * On typical **Linux** distributions it is `/home/YOUR_USERNAME`.
+      * On typical **Linux** distributions it is `/home/YOUR_USERNAME`.
         
     In your home directory, locate the `PHY494` folder, click on it to
     find the `03_python` folder inside and click on the
