add footnote for GitHub classroom activity

--- a/_posts/2021-01-26-03_HelloWorld.md
+++ b/_posts/2021-01-26-03_HelloWorld.md
@@ -104,7 +104,7 @@ For example, get help on the addition operator (and much more):
 
 ### Activity: Python as a calculator ###
 Start `python` and figure out [^2] how to compute the left hand sides (the
-right hand sides are there for you to check your results):
+right hand sides are there for you to check your results):[^7]
 
 \begin{align}
 -1 + 2 &= 1 \\\%
@@ -346,7 +346,20 @@ In `ipython` [^3]
     If you need [help](#help), look at [Using Python as a
     Calculator](https://docs.python.org/3/tutorial/introduction.html#using-python-as-a-calculator)
     in the standard Python Tutorial.
-        
+
+[^7]:
+    
+    You can also do this exercise as an autograded activity: Either
+    follow the GitHub Classroom link provided by your instructor or
+    create a copy of
+    [https://github.com/ASU-CompMethodsPhysics-PHY494/activity-03-python_calculator](https://github.com/ASU-CompMethodsPhysics-PHY494/activity-03-python_calculator)
+    by clicking the green **Use this template** button.
+    
+    Then `git clone` your
+    own repository and follow the instructions in the
+    [README](https://github.com/ASU-CompMethodsPhysics-PHY494/activity-03-python_calculator/blob/main/README.ipynb).
+
+
 [^3]:
 
     `%run` is an ipython "magic" command, see help on those commands
