Python 1: variables and data types

--- a/_posts/2021-01-28-04_Python_1.md
+++ b/_posts/2021-01-28-04_Python_1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 04 Introduction to Python I — Variables and Python data types
+title: 04 Python I — Variables and Python data types
 ---
 
 The [Python](http://www.python.org) programming language is used
@@ -17,13 +17,16 @@ have no problems dealing with Python 2 code if you really have to.)
 
 1. [Resources](#resources)
 2. [Starting Python](#getting-started-)
-3. Today's lesson: [Python Fundamentals](#python-fundamentals)
+3. [Python Fundamentals](#python-fundamentals)
 
 ## Resources ##
 
+There are _many_ books available on Python. The resources below were listed because they are _easily accessible_.
+
 * Official [Beginner's Guide to Python](https://www.python.org/about/gettingstarted/)
 * Official [Python 3 Tutorial](https://docs.python.org/3/tutorial/)
-* [Python Scripting for Computational Science](http://www.springerlink.com/content/978-3-540-73915-9/), Hans Petter Langtangen. Texts in Computational Science and Engineering, Volume 3, 2008. Springer. DOI: [10.1007/978-3-540-73916-6](https://doi.org/10.1007/978-3-540-73916-6) (free access to the [PDF](https://link-springer-com.ezproxy1.lib.asu.edu/book/10.1007%2F978-3-540-73916-6) through the ASU Library — requires ASU login)
+* A Primer on Scientific Programming with Python, Hans Petter Langtangen. [chapters 1-5 PDF](https://hplgit.github.io/primer.html/doc/pub/half/book.pdf), Springer.  ISBN-13: 978-3662498866 (written in Python 2.7 but can be easily used with Python 3, too) [^0]
+* [PHY494 Wiki: List of Python Tutorials]({{ site.wiki.url }}/Python-tutorials)
 
 Keep the [Python documentation](https://www.python.org/doc/) close by
 and have a look at [Python questions on StackOverflow](https://stackoverflow.com/questions/tagged/python).
@@ -63,8 +66,8 @@ or similar.
 ### editor
 
 You will also edit files with *your editor* (see the lesson on
-[creating text files with a text editor]({{site.baseurl}}{%post_url 2020-01-16-01_Unix_Shell%}#creating-text-files-with-a-text-editor)). If you use a
-point-and-click editor, make sure that you can [find the work directory]({{site.baseurl}}{%post_url 2020-01-21-02_HelloWorld%}#fn:1).
+[creating text files with a text editor]({{ site.baseurl }}{% post_url 2021-01-14-01_Unix_Shell %}#creating-text-files-with-a-text-editor)). If you use a
+point-and-click editor, make sure that you can [find the work directory]({{ site.baseurl }}{% post_url 2021-01-26-03_HelloWorld %}#fn:1).
 
 ### python
 
@@ -500,6 +503,23 @@ In [21]: print(ages)
 ------------------------------------------------------------
 
 #### Footnotes ####
+
+[^0]:
+
+     An older book by the same author is freely available for ASU
+     students but is written in Python 2. The concepts are still valid
+     but the syntax may differ in some cases:
+
+     [Python Scripting for Computational
+     Science](http://www.springerlink.com/content/978-3-540-73915-9/),
+     Hans Petter Langtangen. Texts in Computational Science and
+     Engineering, Volume 3, 2008. Springer. DOI:
+     [10.1007/978-3-540-73916-6](https://doi.org/10.1007/978-3-540-73916-6)
+     (free access to the
+     [PDF](https://link-springer-com.ezproxy1.lib.asu.edu/book/10.1007%2F978-3-540-73916-6)
+     through the ASU Library — requires ASU login)
+
+
 
 [^1]:
      There are more container types available in Python (e.g.,
