update instructions for qtconsole

--- a/_posts/2021-01-26-03_HelloWorld.md
+++ b/_posts/2021-01-26-03_HelloWorld.md
@@ -255,10 +255,10 @@ displayed on your screen when you run `motion.py`: [^4]
 
 #### Windows
 
-Run `ipython qtconsole` to show graphics inline:
+Run `jupyter qtconsole` to show graphics inline (this used to be called `ipython qtconsole`):
 
 {% highlight bash %}
-ipython qtconsole
+jupyter qtconsole
 {% endhighlight %}
 
 In `ipython` [^3]
@@ -272,10 +272,10 @@ In `ipython` [^3]
 
 #### macOS
 
-Run `ipython`
+Run `ipython` 
 
 {% highlight bash %}
-ipython --matplotlib=osx
+ipython
 {% endhighlight %}
 
 
@@ -284,6 +284,9 @@ In `ipython` [^3]
 %run motion.py
 {% endhighlight %}
 
+Troubleshooting:
+* If the above does not show a graph, try running `ipython  --matplotlib=osx`.
+* Alternatively, `jupyter qtconcole` will likely also work (with inline graphs).
 
 #### Linux
 
