--- a/_posts/2021-01-28-04_Python_1.md
+++ b/_posts/2021-01-28-04_Python_1.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 04 Python I — Variables and Python data types
+number: 40
 ---
 
 The [Python](http://www.python.org) programming language is used
@@ -133,6 +134,7 @@ label = "energy (MeV)"
 one = 1.
 symmetrical = True
 threehalfpi = 0.5 - 0.5j
+two pi = 0
 {% endhighlight %}
 
 Make sure that each variable contains what you expect.
@@ -143,12 +145,12 @@ Did you get a `SyntaxError`? Why?
 ### Variable types
 Each variable has a **type**:
 
-- [numeric types](https://docs.python.org/3.5/library/stdtypes.html#numeric-types-int-float-complex):
+- [numeric types](https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex):
   `int`, `float`, `complex`
-- [text sequence type](https://docs.python.org/3.5/library/stdtypes.html#text-sequence-type-str) (string): `str`
-- [boolean values](https://docs.python.org/3.5/library/stdtypes.html#boolean-values):
+- [text sequence type](https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str) (string): `str`
+- [boolean values](https://docs.python.org/3/library/stdtypes.html#boolean-values):
   `True` and `False`; in python, boolean values are returned from
-  [truth value testing](https://docs.python.org/3.5/library/stdtypes.html#truth-value-testing)
+  [truth value testing](https://docs.python.org/3/library/stdtypes.html#truth-value-testing)
 - None-data type: `None` (no value or default)
 
 Variables are *dynamically typed*, i.e., Python figures out by itself
@@ -164,7 +166,7 @@ will print `something`.
 
 
 Determine the type of a variable with the
-[type()](https://docs.python.org/3.5/library/functions.html#type)
+[type()](https://docs.python.org/3/library/functions.html#type)
 function:
 
 {% highlight python %}
@@ -208,17 +210,19 @@ bool(" ")
 bool(None)
 {% endhighlight %}
 
+What rules does Python follow to determine the "truthiness" [^2] of an expression? 
+
 
 ### Operators
 * unary: `+x`, `-x`, `not x`
 * binary
 
-  * [comparison operators](https://docs.python.org/3.5/library/stdtypes.html#comparisons),
+  * [comparison operators](https://docs.python.org/3/library/stdtypes.html#comparisons),
 	e.g., `x == y`, `x != y`, `x > y`, `x <= y`, ...
 	
 	A comparison has a boolean value.
 
-  * [numerical operators](https://docs.python.org/3.5/library/stdtypes.html#numeric-types-int-float-complex),
+  * [numerical operators](https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex),
     e.g., `x + y`, `x - y`, `x * y`, `x / y`, `x ** y` (power), `x //
     y` (floor division), `x % y` (remainder). 
 	
@@ -241,7 +245,7 @@ $$
 
 ## Container data types
 *Lists* ("arrays") and *tuples* are
-[sequences](https://docs.python.org/3.5/library/stdtypes.html#sequence-types-list-tuple-range)
+[sequences](https://docs.python.org/3/library/stdtypes.html#sequence-types-list-tuple-range)
 and support a broad set of common operations. *Dictionaries* (dicts)
 contain key-value pairs.[^1]
 
@@ -307,9 +311,9 @@ temperatures[-3]
 
 
 Python
-[built-in function](https://docs.python.org/3.5/library/functions.html#built-in-functions)
+[built-in function](https://docs.python.org/3/library/functions.html#built-in-functions)
 to determine the *length of a list*:
-[len()](https://docs.python.org/3.5/library/functions.html#len):
+[len()](https://docs.python.org/3/library/functions.html#len):
 {% highlight python %}
 len(temperatures)
 {% endhighlight %}
@@ -453,7 +457,7 @@ empty = ()
 {% endhighlight %}
 
 Indexing and slicing
-[works the same way as for lists]((https://docs.python.org/3.5/library/stdtypes.html#sequence-types-list-tuple-range))
+[works the same way as for lists]((https://docs.python.org/3/library/stdtypes.html#sequence-types-list-tuple-range))
 but tuples are *immutable*:
 
 {% highlight python %}
@@ -529,3 +533,6 @@ In [21]: print(ages)
      module in the Standard Library) but understanding *list*,
      *tuple*, and *dict* will already get you a long way.
 
+[^2]:
+
+     See, for instance, YouTube:[Truthiness](https://www.youtube.com/watch?v=Hiifw2fLJ4M) (in Python)
