--- a/_posts/2021-01-28-04_Python_2.md
+++ b/_posts/2021-01-28-04_Python_2.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: 04 Introduction to Python II — Flow control
+title: 04 Python II — Flow control
+number: 41
 ---
 
 We are continuing from
-[the previous lesson]({{site.baseurl}}/{%post_url
-2020-01-28-04_Introduction_to_Python_1%}) in the "work directory"
+[the previous lesson]({{ site.baseurl }}/{% post_url 2021-01-28-04_Python_1 %}) in the "work directory"
 `~/PHY494/04_python`. We will use `ipython` and your text editor.
 
 
@@ -304,7 +304,7 @@ print("Congratulations, you guessed the number", number, "in", n_guesses, "guess
 
 [^0]:
      Remember, in `ipython` you can also run the program with
-	 `%run temperatures.py`.
+     `%run temperatures.py`.
 
 [^1]:
      There are more container types available in Python (e.g.,
@@ -323,21 +323,21 @@ print("Congratulations, you guessed the number", number, "in", n_guesses, "guess
 
 [^3]:
 
-	 We will try a software engineering technique called
+     We will try a software engineering technique called
      [pair programming](https://guide.agilealliance.org/guide/pairing.html)
      (borrowed from
      agile/[extreme programming](http://www.extremeprogramming.org/))
-	 
-	 1. Split into teams of 2. (Be nice. Introduce yourselves.) 
-	 2. Sit next to each other at one desk.
-	 3. Decide whose laptop you are going to use.
-	 4. [Flip a coin](https://www.random.org/coins/?num=1&cur=60-usd.0100c-washington)
-        to decide who will start out as the *navigator* and who will
-        be the *driver*.		
-	 5. Roles:
-		- *driver*: keyboard & types
-		- *navigator* reads code, provides directions, catches bugs
-		- *Both* constantly talk to each other: comment on what you're
-          typing, comment on what is being typed		
-	 6. Switch roles every ~5 minutes
+         
+         1. Split into teams of 2. (Be nice. Introduce yourselves.) 
+         2. Sit next to each other at one desk.
+         3. Decide whose laptop you are going to use.
+         4. [Flip a coin](https://www.random.org/coins/?num=1&cur=60-usd.0100c-washington)
+            to decide who will start out as the *navigator* and who will
+            be the *driver*.            
+         5. Roles:
+                - *driver*: keyboard & types
+                - *navigator* reads code, provides directions, catches bugs
+                - *Both* constantly talk to each other: comment on what you're
+                  typing, comment on what is being typed                
+         6. Switch roles every ~5 minutes
 
